# Autonomous-Indoor-Explorer

./: README.md  autonomous_explorer.urdf.xacro  frames.gv
devel/: .catkin
devel/include/rtabmap_legacy/: CameraConfig.h
devel/include/rtabmap_msgs/: AddLinkRequest.h  CameraModel.h  CameraModels.h  CleanupLocalGridsRequest.h  CleanupLocalGridsResponse.h  DetectMoreLoopClosuresRequest.h  DetectMoreLoopClosuresResponse.h  EnvSensor.h  GPS.h  GetMap2Request.h  GetMap2Response.h  GetMapRequest.h  GetMapResponse.h  GetNodeDataRequest.h  GetNodeDataResponse.h  GetNodesInRadiusRequest.h  GetNodesInRadiusResponse.h  GetPlanRequest.h  GetPlanResponse.h  GlobalBundleAdjustmentRequest.h  GlobalDescriptor.h  Goal.h  Info.h  KeyPoint.h  LandmarkDetection.h  LandmarkDetections.h  Link.h  ListLabelsResponse.h  LoadDatabaseRequest.h  MapData.h  MapGraph.h  Node.h  OdomInfo.h  Path.h  Point2f.h  Point3f.h  PublishMapRequest.h  (+10 more)
src/autonomous_explorer/: CMakeLists.txt  package.xml
src/autonomous_explorer/config/: amcl.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/autonomous_explorer/launch/: amcl.launch  display.launch  lidar_mapping.launch  navigation.launch  navigation_main.launch
src/autonomous_explorer/maps/: mymap.pgm  mymap.yaml
src/autonomous_explorer/rviz/: nav_config.rviz
src/autonomous_explorer/scripts/: mutli_goal_nav.py  obstacle_avoidance.py  obstacle_avoidance1.py
src/autonomous_explorer/urdf/: autonomous_explorer.urdf.xacro
src/major_project_worlds/: CMakeLists.txt  package.xml
(+82 files in other folders)
